# icesat2db

./: CITATION.cff  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  conftest.py  environment.yml  pyproject.toml
ci/requirements/: doc.yml  environment.yml
data/: bucketpolicy.json
data/config_files/: data_config.yml
data/geojson/: BR-Sa3.geojson  global_geojson.geojson  problematic_shot_bbox.geojson
doc/: Makefile  README.rst  conf.py  index.html  index.rst  sg_execution_times.rst
doc/_static/: gedidb.css
doc/auto_examples/: authentification.codeobj.json  authentification.ipynb  authentification.rst  data_processor.codeobj.json  data_processor.ipynb  data_processor.py  data_processor.rst  data_provider.codeobj.json  data_provider.ipynb  data_provider.rst  get_variable_list.codeobj.json  get_variable_list.ipynb  get_variable_list.py  get_variable_list.rst  index.rst  regional_tileDBdatabase.codeobj.json  regional_tileDBdatabase.ipynb  regional_tileDBdatabase.rst  sg_execution_times.rst
doc/gallery/: authentification.py  data_processor.py  data_provider.py  regional_tileDBdatabase.py
doc/user/: api.rst  contributing.rst  database.rst  faq.rst  fundamentals.authenticate.rst  fundamentals.filters.rst  fundamentals.processor.rst  fundamentals.provider.rst  fundamentals.rst  fundamentals.setup.rst  index.rst  installing.rst  quick-overview.rst  tiledb_database.rst  tuning-config.rst  why-gedidb.rst
examples/: authentification.ipynb  data_processor.ipynb  data_provider.ipynb  regional_tileDBdatabase.ipynb
gedidb/: __init__.py
gedidb/beam/: __init__.py  l2a_beam.py  l2b_beam.py  l4a_beam.py  l4c_beam.py
gedidb/core/: gedidatabase.py  gedigranule.py  gediprocessor.py  gediprovider.py
gedidb/downloader/: cmr_query.py  data_downloader.py
gedidb/granule/: Granule.py  granule_parser.py  l2a_granule.py  l2b_granule.py  l4a_granule.py  l4c_granule.py
gedidb/providers/: tiledb_provider.py
gedidb/tests/: test_gedi_granules.py
gedidb/utils/: constants.py  print_versions.py
icesat2db/: __init__.py
icesat2db/beam/: Beam.py  atl03_beam.py  atl08_beam.py
icesat2db/core/: __init__.py  gedidatabase.py  gedigranule.py  gediprocessor.py  gediprovider.py  icesat2database.py  icesat2granule.py  icesat2processor.py  icesat2provider.py
icesat2db/downloader/: authentication.py  cmr_query.py  data_downloader.py
icesat2db/granule/: Granule.py  atl03_granule.py  atl06_granule.py  atl08_granule.py  granule_name.py  granule_parser.py
paper/: paper.md
scripts/: create_fragment_domain.py  delete_granule_meta.py  gedi_processor.py  gedi_provider.py  plot_fragment_structure.py
(+25 files in other folders)
